--- a/Client/Admin/Admin_JS.html
+++ b/Client/Admin/Admin_JS.html
@@ -36,22 +36,21 @@
         objInteractionTriggerEl, objInteractionActionEl,
         modalContentConfigEl, objModalContentEl,
         navigateToConfigEl, objNavigateToEl,
-        panZoomConfigEl, objPanZoomLevelEl, // These are for Pan/Zoom
-        objFontFamilyEl, objFontSizeEl, objFontWeightEl, objFontStyleEl, objTextAlignEl, objLineHeightEl, objCharSpacingEl,
+        panZoomConfigEl, objPanZoomLevelEl, 
+        // THIS IS THE START OF THE LIKELY DUPLICATE DECLARATION AREA
         objFontFamilyEl, objFontSizeEl, objFontWeightEl, objFontStyleEl, objTextAlignEl, objLineHeightEl, objCharSpacingEl,
         objShadowAffectStrokeEl, objShadowNonScalingEl,
+        // New Animation DOM elements
         objAnimationTriggerEl, objAnimationTypeEl, animationParamsConfigEl,
         objAnimationDurationEl, objAnimationStrengthEl, objAnimationStrengthUnitEl,
-
         // Step 20 Media Elements
         youtubeUrlInputEl, setYoutubeBackgroundButtonEl,
-        audioUploaderEl, /* attachAudioButtonEl, */ attachedAudioNameEl, removeAudioButtonEl, // Removed attachAudioButtonEl reference as we trigger on change
+        audioUploaderEl, /* attachAudioButtonEl, */ attachedAudioNameEl, removeAudioButtonEl, 
         adminMediaPlaceholderEl,
         // Existing properties
         objFillEl, objStrokeColorEl, objStrokeWidthEl, objOpacityEl,
         textSpecificControlsEl, objTextContentEl,
         objShadowColorEl, objShadowBlurEl, objShadowOffsetXEl, objShadowOffsetYEl;
-        // REMOVED: attachFromDriveButtonEl reference
 
     // --- Initialization ---
     document.addEventListener('DOMContentLoaded', function() {
@@ -1248,68 +1247,68 @@
     }
 
     function populateToolbar(activeObject) {
-      if (!overlayPropertiesToolbarEl) { console.error("populateToolbar: overlayPropertiesToolbarEl not found."); return; }
-      if (!activeObject) { overlayPropertiesToolbarEl.style.display = 'none'; return; }
-      overlayPropertiesToolbarEl.style.display = 'block';
+        if (!overlayPropertiesToolbarEl) { console.error("populateToolbar: overlayPropertiesToolbarEl not found."); return; }
+        if (!activeObject) { overlayPropertiesToolbarEl.style.display = 'none'; return; }
+        overlayPropertiesToolbarEl.style.display = 'block';
 
-      // --- Basic Properties ---
-      if (objXEl) objXEl.value = activeObject.left ? activeObject.left.toFixed(0) : 0;
-      if (objYEl) objYEl.value = activeObject.top ? activeObject.top.toFixed(0) : 0;
-      if (objWidthEl) objWidthEl.value = activeObject.getScaledWidth ? activeObject.getScaledWidth().toFixed(0) : (activeObject.width || 0);
-      if (objHeightEl) objHeightEl.value = activeObject.getScaledHeight ? activeObject.getScaledHeight().toFixed(0) : (activeObject.height || 0);
-      if (objAngleEl) objAngleEl.value = activeObject.angle ? activeObject.angle.toFixed(0) : 0;
-      if (objFillEl) objFillEl.value = toHexColor(activeObject.fill);
-      if (objStrokeColorEl) objStrokeColorEl.value = toHexColor(activeObject.stroke);
-      if (objStrokeWidthEl) objStrokeWidthEl.value = activeObject.strokeWidth === undefined ? 0 : activeObject.strokeWidth;
-      if (objOpacityEl) objOpacityEl.value = activeObject.opacity === undefined ? 1 : activeObject.opacity;
+        // --- Basic Properties ---
+        if (objXEl) objXEl.value = activeObject.left ? activeObject.left.toFixed(0) : 0;
+        if (objYEl) objYEl.value = activeObject.top ? activeObject.top.toFixed(0) : 0;
+        if (objWidthEl) objWidthEl.value = activeObject.getScaledWidth ? activeObject.getScaledWidth().toFixed(0) : (activeObject.width || 0);
+        if (objHeightEl) objHeightEl.value = activeObject.getScaledHeight ? activeObject.getScaledHeight().toFixed(0) : (activeObject.height || 0);
+        if (objAngleEl) objAngleEl.value = activeObject.angle ? activeObject.angle.toFixed(0) : 0;
+        if (objFillEl) objFillEl.value = toHexColor(activeObject.fill);
+        if (objStrokeColorEl) objStrokeColorEl.value = toHexColor(activeObject.stroke);
+        if (objStrokeWidthEl) objStrokeWidthEl.value = activeObject.strokeWidth === undefined ? 0 : activeObject.strokeWidth;
+        if (objOpacityEl) objOpacityEl.value = activeObject.opacity === undefined ? 1 : activeObject.opacity;
 
-      // --- Text Properties (Conditional Display) ---
-      const isTextObject = activeObject.type === 'textbox' || activeObject.type === 'i-text';
-      if (textSpecificControlsEl) {
-          textSpecificControlsEl.style.display = isTextObject ? 'block' : 'none';
-          if (isTextObject) {
-              if (objTextContentEl) objTextContentEl.value = activeObject.text || '';
-              if (objFontFamilyEl) objFontFamilyEl.value = activeObject.fontFamily || 'Arial';
-              if (objFontSizeEl) objFontSizeEl.value = activeObject.fontSize || 24;
-              if (objFontWeightEl) objFontWeightEl.value = activeObject.fontWeight || 'normal';
-              if (objFontStyleEl) objFontStyleEl.value = activeObject.fontStyle || 'normal';
-              if (objTextAlignEl) objTextAlignEl.value = activeObject.textAlign || 'left';
-              if (objLineHeightEl) objLineHeightEl.value = activeObject.lineHeight || 1.16;
-              if (objCharSpacingEl) objCharSpacingEl.value = activeObject.charSpacing || 0;
-          }
-      }
+        // --- Text Properties (Conditional Display) ---
+        const isTextObject = activeObject.type === 'textbox' || activeObject.type === 'i-text';
+        if (textSpecificControlsEl) {
+            textSpecificControlsEl.style.display = isTextObject ? 'block' : 'none';
+            if (isTextObject) {
+                if (objTextContentEl) objTextContentEl.value = activeObject.text || '';
+                if (objFontFamilyEl) objFontFamilyEl.value = activeObject.fontFamily || 'Arial';
+                if (objFontSizeEl) objFontSizeEl.value = activeObject.fontSize || 24;
+                if (objFontWeightEl) objFontWeightEl.value = activeObject.fontWeight || 'normal';
+                if (objFontStyleEl) objFontStyleEl.value = activeObject.fontStyle || 'normal';
+                if (objTextAlignEl) objTextAlignEl.value = activeObject.textAlign || 'left';
+                if (objLineHeightEl) objLineHeightEl.value = activeObject.lineHeight || 1.16;
+                if (objCharSpacingEl) objCharSpacingEl.value = activeObject.charSpacing || 0;
+            }
+        }
 
-      // --- Shadow Properties ---
-      const shadow = activeObject.shadow;
-      if (objShadowColorEl) objShadowColorEl.value = shadow ? toHexColor(shadow.color) : '#000000';
-      if (objShadowBlurEl) objShadowBlurEl.value = shadow ? shadow.blur : 0;
-      if (objShadowOffsetXEl) objShadowOffsetXEl.value = shadow ? shadow.offsetX : 0;
-      if (objShadowOffsetYEl) objShadowOffsetYEl.value = shadow ? shadow.offsetY : 0;
-      if (objShadowAffectStrokeEl) objShadowAffectStrokeEl.checked = shadow ? !!shadow.affectStroke : false;
-      if (objShadowNonScalingEl) objShadowNonScalingEl.checked = shadow ? !!shadow.nonScaling : false;
+        // --- Shadow Properties ---
+        const shadow = activeObject.shadow;
+        if (objShadowColorEl) objShadowColorEl.value = shadow ? toHexColor(shadow.color) : '#000000';
+        if (objShadowBlurEl) objShadowBlurEl.value = shadow ? shadow.blur : 0;
+        if (objShadowOffsetXEl) objShadowOffsetXEl.value = shadow ? shadow.offsetX : 0;
+        if (objShadowOffsetYEl) objShadowOffsetYEl.value = shadow ? shadow.offsetY : 0;
+        if (objShadowAffectStrokeEl) objShadowAffectStrokeEl.checked = shadow ? !!shadow.affectStroke : false;
+        if (objShadowNonScalingEl) objShadowNonScalingEl.checked = shadow ? !!shadow.nonScaling : false;
 
-      // --- Interaction Properties ---
-      const interaction = activeObject.customInteraction || { trigger: "", action: "", modalContent: "", navigateTo: "" };
-      if (objInteractionTriggerEl) objInteractionTriggerEl.value = interaction.trigger || "";
-      if (objInteractionActionEl) objInteractionActionEl.value = interaction.action || "";
-      if (objModalContentEl) objModalContentEl.value = interaction.modalContent || "";
-      if (objNavigateToEl) objNavigateToEl.value = interaction.navigateTo || "";
-      updateInteractionConfigVisibility(interaction.action);
+        // --- Interaction Properties ---
+        const interaction = activeObject.customInteraction || { trigger: "", action: "", modalContent: "", navigateTo: "" };
+        if (objInteractionTriggerEl) objInteractionTriggerEl.value = interaction.trigger || "";
+        if (objInteractionActionEl) objInteractionActionEl.value = interaction.action || "";
+        if (objModalContentEl) objModalContentEl.value = interaction.modalContent || "";
+        if (objNavigateToEl) objNavigateToEl.value = interaction.navigateTo || "";
+        updateInteractionConfigVisibility(interaction.action);
 
-      // --- Animation Properties ---
-      const animation = activeObject.customAnimation || { trigger: "", type: "", duration: 500, strength: 5 };
-      if (objAnimationTriggerEl) objAnimationTriggerEl.value = animation.trigger || "";
-      if (objAnimationTypeEl) objAnimationTypeEl.value = animation.type || "";
+        // --- Animation Properties ---
+        const animation = activeObject.customAnimation || { trigger: "", type: "", duration: 500, strength: 5 };
+        if (objAnimationTriggerEl) objAnimationTriggerEl.value = animation.trigger || "";
+        if (objAnimationTypeEl) objAnimationTypeEl.value = animation.type || "";
 
-      const showAnimParams = !!(animation.trigger && animation.type);
-      if (animationParamsConfigEl) animationParamsConfigEl.style.display = showAnimParams ? 'block' : 'none';
+        const showAnimParams = !!(animation.trigger && animation.type);
+        if (animationParamsConfigEl) animationParamsConfigEl.style.display = showAnimParams ? 'block' : 'none';
 
-      if (showAnimParams) {
-      if (objAnimationDurationEl) objAnimationDurationEl.value = animation.duration || 500;
-      if (objAnimationStrengthEl) objAnimationStrengthEl.value = animation.strength === undefined ? 5 : animation.strength;
-      updateAnimationStrengthUnit(animation.type);
+        if (showAnimParams) {
+        if (objAnimationDurationEl) objAnimationDurationEl.value = animation.duration || 500;
+        if (objAnimationStrengthEl) objAnimationStrengthEl.value = animation.strength === undefined ? 5 : animation.strength;
+        updateAnimationStrengthUnit(animation.type);
+        }
     }
-
     function handleInteractionChange() {
         const canvas = adminApp.state.fabricCanvasInstance;
         if (!canvas) return;
