--- a/Client/Admin/AdminView.html
+++ b/Client/Admin/AdminView.html
@@ -6,7 +6,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fabric.js/5.3.0/fabric.min.js"></script>
     <!-- Add YouTube Player API script (Needed if you ever add YT previews here) -->
     <!-- <script src="https://www.youtube.com/iframe_api"></script> -->
-    <!-- REMOVED: Google API Client Library for Picker -->
     <style>
       body { font-family: Arial, sans-serif; margin: 20px; background-color: #f4f4f4; color: #333; }
       .container { background-color: #fff; padding: 20px; margin-bottom: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1); }
@@ -168,10 +167,12 @@
       }
       .toolbar-section {
         padding-bottom: 10px;
+        /* Optional: Add a min-width or flex-basis if sections are too narrow */
+        /* flex-basis: 250px; */ 
       }
        .toolbar-section label {
           display: inline-block;
-          width: 110px;
+          width: 110px; /* Consider adjusting if text wraps oddly */
           margin-bottom: 8px;
           vertical-align: middle;
       }
@@ -181,8 +182,8 @@
        .toolbar-section select,
        .toolbar-section textarea {
           display: inline-block;
-          width: 150px;
-          max-width: 180px;
+          width: 150px; /* Default width */
+          max-width: 180px; /* Max width */
           padding: 6px;
           margin-bottom: 8px;
           border: 1px solid #ddd;
@@ -199,7 +200,7 @@
       }
       .toolbar-section textarea {
         min-height: 60px;
-        width: 200px;
+        width: 200px; /* Textareas can be wider */
         vertical-align: top;
       }
        .toolbar-section input[type="checkbox"] {
@@ -219,22 +220,22 @@
         color: #555;
         font-size: 0.9em;
         text-transform: uppercase;
-        width: 100%;
+        width: 100%; /* Make section titles span full width of section */
       }
-      .config-section {
+      .config-section { /* For conditional sub-sections like modal content */
         margin-top: 10px;
         padding-left: 10px;
         border-left: 2px solid #007bff;
-        width: 100%;
+        width: 100%; /* Make config section take full width of its parent toolbar-section */
       }
-       .config-section label { width: 110px; }
-       .config-section input, .config-section textarea { width: 200px; }
+       .config-section label { width: auto; } /* Let labels in config sections size naturally */
+       .config-section input, .config-section textarea { width: calc(100% - 10px); max-width: none; } /* Full width within config section */
     </style>
   </head>
   <body>
     <h1>Admin Dashboard</h1>
 
-    <!-- View Container for List/Create -->
+    <!-- View Container for List/Create Projects -->
     <div id="listViewContainer">
         <div class="container" id="createProjectSection">
           <h2>Create New Project</h2>
@@ -248,34 +249,27 @@
                  <!-- Dynamically populated -->
             </div>
         </div>
-    </div>
+    </div> <!-- End of listViewContainer -->
 
     <!-- View Container for Editing a Project -->
+    <!-- ALL EDITING UI MUST BE INSIDE THIS DIV -->
     <div class="container" id="editViewContainer" style="display:none;">
         <button id="backToProjectsListButton">Back to Projects List</button>
         <h2 id="editingProjectTitle">Editing Project: </h2>
 
-        <!-- Updated Slide Settings Group -->
         <div class="edit-controls-group">
             <h3>Current Slide Settings / Media</h3>
-
             <label for="imageUploader">Image Background (Upload):</label>
             <input type="file" id="imageUploader" accept="image/*">
-            <!-- REMOVED: Attach from Drive button -->
-
             <hr style="margin: 20px 0;">
-
             <label for="youtubeUrlInput">YouTube URL Background:</label>
             <input type="text" id="youtubeUrlInput" placeholder="Paste YouTube video URL here">
             <button id="setYoutubeBackgroundButton">Set YouTube BG</button>
-
             <hr style="margin: 20px 0;">
-
             <label for="audioUploader">Attach Slide Audio (Upload):</label>
             <input type="file" id="audioUploader" accept="audio/*">
             <span id="attachedAudioName" style="margin-left: 10px; font-style: italic;"></span>
             <button id="removeAudioButton" style="display:none; margin-left: 5px; background-color: #ffc107; color: black; padding: 5px 8px; font-size: 0.8em;">Remove Audio</button>
-
         </div>
 
         <div class="edit-controls-group">
@@ -288,6 +282,7 @@
         <div id="overlayPropertiesToolbar" style="display:none;">
             <h3>Overlay Properties</h3>
             <div class="toolbar-sections-container">
+                <!-- Position & Size Section -->
                 <div class="toolbar-section">
                     <h4>Position & Size</h4>
                     <label for="objX">X:</label> <input type="number" id="objX" class="sidebar-input"><br>
@@ -297,6 +292,7 @@
                     <label for="objAngle">Angle:</label> <input type="number" id="objAngle" class="sidebar-input">
                 </div>
 
+                <!-- Appearance Section -->
                 <div class="toolbar-section">
                     <h4>Appearance</h4>
                     <label for="objFill">Fill Color:</label> <input type="color" id="objFill" class="sidebar-input" value="#ff0000"><br>
@@ -305,141 +301,59 @@
                     <label for="objOpacity">Opacity:</label> <input type="range" id="objOpacity" min="0" max="1" step="0.01" class="sidebar-input" value="1.0">
                 </div>
 
+                <!-- Text Styling Section (conditional) -->
                 <div class="toolbar-section" id="textSpecificControls" style="display:none;">
                     <h4>Text Styling</h4>
                     <label for="objTextContent">Content:</label><br>
                     <textarea id="objTextContent" rows="3" class="sidebar-input"></textarea><br>
-
-                    <label for="objFontFamily">Font Family:</label>
-                    <select id="objFontFamily" class="sidebar-input"></select><br>
-
-                    <label for="objFontSize">Font Size:</label>
-                    <input type="number" id="objFontSize" min="1" class="sidebar-input"><br>
-
-                    <label for="objFontWeight">Font Weight:</label>
-                    <select id="objFontWeight" class="sidebar-input">
-                        <option value="normal">Normal</option>
-                        <option value="bold">Bold</option>
-                    </select><br>
-
-                    <label for="objFontStyle">Font Style:</label>
-                    <select id="objFontStyle" class="sidebar-input">
-                        <option value="normal">Normal</option>
-                        <option value="italic">Italic</option>
-                    </select><br>
-
-                    <label for="objTextAlign">Text Align:</label>
-                    <select id="objTextAlign" class="sidebar-input">
-                        <option value="left">Left</option>
-                        <option value="center">Center</option>
-                        <option value="right">Right</option>
-                        <option value="justify">Justify</option>
-                    </select><br>
-
-                    <label for="objLineHeight">Line Height:</label>
-                    <input type="number" id="objLineHeight" step="0.1" min="0" class="sidebar-input"><br>
-
-                    <label for="objCharSpacing">Char Spacing:</label>
-                    <input type="number" id="objCharSpacing" class="sidebar-input">
+                    <label for="objFontFamily">Font Family:</label> <select id="objFontFamily" class="sidebar-input"></select><br>
+                    <label for="objFontSize">Font Size:</label> <input type="number" id="objFontSize" min="1" class="sidebar-input"><br>
+                    <label for="objFontWeight">Font Weight:</label> <select id="objFontWeight" class="sidebar-input"><option value="normal">Normal</option><option value="bold">Bold</option></select><br>
+                    <label for="objFontStyle">Font Style:</label> <select id="objFontStyle" class="sidebar-input"><option value="normal">Normal</option><option value="italic">Italic</option></select><br>
+                    <label for="objTextAlign">Text Align:</label> <select id="objTextAlign" class="sidebar-input"><option value="left">Left</option><option value="center">Center</option><option value="right">Right</option><option value="justify">Justify</option></select><br>
+                    <label for="objLineHeight">Line Height:</label> <input type="number" id="objLineHeight" step="0.1" min="0" class="sidebar-input"><br>
+                    <label for="objCharSpacing">Char Spacing:</label> <input type="number" id="objCharSpacing" class="sidebar-input">
                 </div>
 
+                <!-- Shadow Section -->
                 <div class="toolbar-section">
                     <h4>Shadow</h4>
                     <label for="objShadowColor">Color:</label> <input type="color" id="objShadowColor" class="sidebar-input" value="#000000"><br>
                     <label for="objShadowBlur">Blur:</label> <input type="range" id="objShadowBlur" min="0" max="50" step="1" class="sidebar-input" value="0"><br>
                     <label for="objShadowOffsetX">Offset X:</label> <input type="number" id="objShadowOffsetX" class="sidebar-input" value="0"><br>
                     <label for="objShadowOffsetY">Offset Y:</label> <input type="number" id="objShadowOffsetY" class="sidebar-input" value="0"><br>
-
-                    <input type="checkbox" id="objShadowAffectStroke" class="sidebar-input">
-                    <label for="objShadowAffectStroke" class="checkbox-label">Affects Stroke</label><br>
-
-                    <input type="checkbox" id="objShadowNonScaling" class="sidebar-input">
-                    <label for="objShadowNonScaling" class="checkbox-label">Non-Scaling</label>
+                    <input type="checkbox" id="objShadowAffectStroke" class="sidebar-input"> <label for="objShadowAffectStroke" class="checkbox-label">Affects Stroke</label><br>
+                    <input type="checkbox" id="objShadowNonScaling" class="sidebar-input"> <label for="objShadowNonScaling" class="checkbox-label">Non-Scaling</label>
                 </div>
 
+                <!-- Interactions Section -->
                 <div class="toolbar-section">
                     <h4>Interactions</h4>
-                    <label for="objInteractionTrigger">Trigger:</label>
-                    <select id="objInteractionTrigger" class="sidebar-input">
-                        <option value="">None</option>
-                        <option value="click">On Click</option>
-                        <option value="hover">On Hover</option>
-                        <option value="clickAndHold">Click and Hold</option> <!-- Step 23 -->
-                    </select><br>
-
-                    <label for="objInteractionAction">Action:</label>
-                    <select id="objInteractionAction" class="sidebar-input">
-                        <option value="">None</option>
-                        <option value="showModal">Show Modal</option>
-                        <option value="navigateToSlide">Navigate to Slide</option>
-                        <option value="navigateToURL">Navigate to URL</option>
-                        <option value="spotlight">Spotlight</option>
-                        <option value="reveal">Reveal</option>
-                        <option value="panZoomToTarget">Pan/Zoom to Target</option>
-                        <!-- <option value="panZoom">Pan/Zoom</option> --> <!-- Add later -->
-                    </select>
-
-                    <div id="modalContentConfig" class="config-section" style="display:none;">
-                        <label for="objModalContent">Modal Content:</label><br>
-                        <textarea id="objModalContent" rows="3" class="sidebar-input"></textarea>
-                    </div>
-
-                    <div id="navigateToConfig" class="config-section" style="display:none;">
-                        <label for="objNavigateTo">Target (Slide ID/URL):</label>
-                        <input type="text" id="objNavigateTo" class="sidebar-input">
-                    </div>
-                    <!-- New Configuration Section for Pan/Zoom -->
-                    <div id="panZoomConfigEl" class="config-section" style="display:none;">
-                        <label for="objPanZoomLevel">Zoom Level (e.g., 1.5):</label>
-                        <input type="number" id="objPanZoomLevel" class="sidebar-input" step="0.1" min="0.1" value="1.5">
-                    </div>
+                    <label for="objInteractionTrigger">Trigger:</label> <select id="objInteractionTrigger" class="sidebar-input"><option value="">None</option><option value="click">On Click</option><option value="hover">On Hover</option><option value="clickAndHold">Click and Hold</option></select><br>
+                    <label for="objInteractionAction">Action:</label> <select id="objInteractionAction" class="sidebar-input"><option value="">None</option><option value="showModal">Show Modal</option><option value="navigateToSlide">Navigate to Slide</option><option value="navigateToURL">Navigate to URL</option><option value="spotlight">Spotlight</option><option value="reveal">Reveal</option><option value="panZoomToTarget">Pan/Zoom to Target</option></select>
+                    <div id="modalContentConfig" class="config-section" style="display:none;"><label for="objModalContent">Modal Content:</label><br><textarea id="objModalContent" rows="3" class="sidebar-input"></textarea></div>
+                    <div id="navigateToConfig" class="config-section" style="display:none;"><label for="objNavigateTo">Target (Slide ID/URL):</label><input type="text" id="objNavigateTo" class="sidebar-input"></div>
+                    <div id="panZoomConfigEl" class="config-section" style="display:none;"><label for="objPanZoomLevel">Zoom Level (e.g., 1.5):</label><input type="number" id="objPanZoomLevel" class="sidebar-input" step="0.1" min="0.1" value="1.5"></div>
                 </div>
-                              <!-- New Animation Section -->
-              < div class="toolbar-section">
+
+                <!-- Animation Section -->
+                <div class="toolbar-section">
                    <h4>Animations</h4>
-                   <label for="objAnimationTrigger">Anim. Trigger:</label>
-                   <select id="objAnimationTrigger" class="sidebar-input">
-                       <option value="">None</option>
-                       <option value="onLoad">On Slide Load</option>
-                       <option value="onHover">On Hover</option>
-                       <option value="onClick">On Click</option>
-                   </select><br>
-
-                   <label for="objAnimationType">Anim. Type:</label>
-                   <select id="objAnimationType" class="sidebar-input">
-                       <option value="">None</option>
-                       <option value="wiggle">Wiggle</option>
-                       <option value="float">Float</option>
-                       <option value="growShrink">Grow/Shrink</option>
-                       <!-- Add more animation types later if needed -->
-                   </select><br>
-
+                   <label for="objAnimationTrigger">Anim. Trigger:</label> <select id="objAnimationTrigger" class="sidebar-input"><option value="">None</option><option value="onLoad">On Slide Load</option><option value="onHover">On Hover</option><option value="onClick">On Click</option></select><br>
+                   <label for="objAnimationType">Anim. Type:</label> <select id="objAnimationType" class="sidebar-input"><option value="">None</option><option value="wiggle">Wiggle</option><option value="float">Float</option><option value="growShrink">Grow/Shrink</option></select><br>
                    <div id="animationParamsConfig" style="display:none;">
-                       <label for="objAnimationDuration">Duration (ms):</label>
-                       <input type="number" id="objAnimationDuration" class="sidebar-input" min="100" step="50" value="500"><br>
-                      
-                       <label for="objAnimationStrength">Strength:</label>
-                       <input type="number" id="objAnimationStrength" class="sidebar-input" step="0.1" value="5">
-                       <span id="objAnimationStrengthUnit" style="font-size:0.8em; margin-left:5px;">(pixels/degrees/scale)</span>
+                       <label for="objAnimationDuration">Duration (ms):</label> <input type="number" id="objAnimationDuration" class="sidebar-input" min="100" step="50" value="500"><br>
+                       <label for="objAnimationStrength">Strength:</label> <input type="number" id="objAnimationStrength" class="sidebar-input" step="0.1" value="5"> <span id="objAnimationStrengthUnit" style="font-size:0.8em; margin-left:5px;">(pixels/degrees/scale)</span>
                    </div>
                 </div>
+                <!-- Removed premature "Actions" section for now -->
+            </div> <!-- End of toolbar-sections-container -->
+        </div> <!-- End of overlayPropertiesToolbar -->
 
-                <div class="toolbar-section">
-                    <h4>Actions</h4>
-                    <button id="deleteOverlayButton" class="danger-button">Delete Overlay</button>
-                    <button id="duplicateOverlayButton">Duplicate Overlay</button>
-                    <button id="bringToFrontButton">Bring to Front</button>
-                    <button id="sendToBackButton">Send to Back</button>
-                </div>
-            </div>
-        </div>
-
-        <!-- Updated Canvas Container to hold placeholder -->
         <div id="fabricCanvasContainer">
             <div id="adminMediaPlaceholder" class="media-placeholder" style="display: none;"></div>
             <canvas id="fabricCanvasElement"></canvas>
         </div>
-
 
         <div id="slideManagementPanel">
             <h3>Slides</h3>
@@ -449,13 +363,11 @@
                  <!-- Dynamically populated -->
             </div>
         </div>
-
-    </div>
+    </div> <!-- End of editViewContainer -->
 
     <div id="messageArea"></div>
 
     <?!= include('Client/Shared/LoadingSpinner'); ?>
-    <!-- **** CORRECT SCRIPT INCLUDE FOR ADMIN **** -->
     <?!= include('Client/Admin/Admin_JS'); ?>
   </body>
 </html>
